terminen POST y PUT o PATCH

--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fetch API</title>
+  <title>MOVIES DB</title>
   <link rel="stylesheet" href="./index.css">
   <script defer src="./index.js"></script>
 </head>
 
 <body>
-  <h1>The Movies Database</h1>
-  <p>Your favorite movies in one place</p>
+  <header>
+    <h1>The Movies Database</h1>
+    <p>Your favorite movies in one place</p>
+    <nav>
+      <ul>
+        <li><a href="./index.thml">HOME</a></li>
+        <li><a href="./create.html">CREATE</a></li>
+      </ul>
+    </nav>
+  </header>
   <section id='moviesContainer'>
   </section>
 </body>
