--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 </head>
 
 <body>
-  <header>
-    <h1>The Movies Database</h1>
-    <p>Your favorite movies in one place</p>
-    <nav>
-      <ul>
-        <li><a href="./index.thml">HOME</a></li>
-        <li><a href="./create.html">CREATE</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section id='moviesContainer'>
-  </section>
+  <div class="container">
+
+    <header>
+      <h1>The Movies Database</h1>
+      <p>Your favorite movies in one place</p>
+      <nav>
+        <ul>
+          <li><a href="./index.thml">HOME</a></li>
+          <li><a href="./create.html">CREATE</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section id='moviesContainer'>
+    </section>
+  </div>
 </body>
 
 </html>
